# baby_tracker

./: .gitignore  BOT_SETUP.md  Dockerfile  HA_INTEGRATION.md  Makefile  README.md  bot_config.md  devplan.md  docker-compose.yml  hacs.json  lovelace_dashboard.yaml  pyproject.toml
bot/: .env.example  ha_client.py  main.py
custom_components/baby_tracker/: __init__.py  binary_sensor.py  bot.py  calendar.py  config_flow.py  const.py  coordinator.py  diagnostics.py  event_store.py  manifest.json  models.py  sensor.py  strings.json
custom_components/baby_tracker/translations/: it.json
custom_components/baby_tracker/www/: baby-tracker-card.js
ha_package/: baby_tracker.yaml
src/app/: main.py
src/app/api/: ha.py  webapp.py
src/app/bot/: setup.py
src/app/bot/handlers/: admin.py  charts.py  history.py  import_export.py  manual_log.py  onboarding.py  profile.py  tracking.py
src/app/core/: config.py
src/app/db/: base.py  models.py  session.py
src/app/services/: charts.py  event.py  tenant.py
src/static/: index.html
